# kindred

./: .gitignore  .swiftformat  .swiftlint.yml  Makefile  README.md  build.gradle.kts  settings.gradle.kts
.githooks/: pre-commit
.github/workflows/: generate-openapi.yml  lint.yml  test.yml  validate-branch.yml  validate-linear-ticket.yml
androidApp/: build.gradle.kts
androidApp/src/main/kotlin/com/example/kindred/: MainActivity.kt
androidApp/src/main/res/values/: strings.xml
backend/: .env.example  .env.test.example  README.md  openapi.json  pyproject.toml
backend/migrations/: env.py  script.py.mako
backend/migrations/versions/: 20260714_01_initial_schema.py
backend/scripts/: generate_openapi.py
backend/src/kindred_api/: __init__.py  config.py  dependencies.py  lifecycle.py  main.py
backend/src/kindred_api/db/: __init__.py  base.py  session.py
backend/src/kindred_api/dtos/: __init__.py
backend/src/kindred_api/routes/: health.py
backend/src/kindred_api/services/: health.py
backend/tests/: conftest.py
backend/tests/integration/: conftest.py  test_health.py  test_migrations.py  test_openapi.py  test_postgres.py
backend/tests/unit/: test_config.py  test_session.py
docs/solutions/workflow-issues/: serial-alembic-migrations-2026-07-14.md
gradle/: libs.versions.toml
iosApp/Configuration/: Config.xcconfig
iosApp/iosApp/: ContentView.swift
iosApp/iosApp.xcodeproj/: project.pbxproj
scripts/: swiftformat  swiftlint
shared/: build.gradle.kts
shared/src/androidHostTest/kotlin/com/example/kindred/: SharedLogicAndroidHostTest.kt
shared/src/androidMain/kotlin/com/example/kindred/: Platform.android.kt
shared/src/commonMain/kotlin/com/example/kindred/: App.kt  Greeting.kt  GreetingUtil.kt  Platform.kt
shared/src/commonMain/kotlin/com/example/kindred/feed/: FeedScreen.kt  LikeButton.kt  PostCard.kt
shared/src/commonTest/kotlin/com/example/kindred/: SharedCommonTest.kt
shared/src/iosMain/kotlin/com/example/kindred/: MainViewController.kt  Platform.ios.kt
shared/src/iosTest/kotlin/com/example/kindred/: SharedLogicIOSTest.kt
(+2 files in other folders)
